# Colosseum

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: build-test.yml  cmake-single-platform.yml
assets/shaders/: shader.frag  shader.vert
scripts/: build.bat  build_debug.bat  build_release.bat  generate_project_files.bat
source/Common/: CMakeLists.txt
source/Common/include/: Array.h  DependencyGraph.h  Handle.h  ObjectPool.h  Random.h
source/Common/src/: DependencyGraph.cpp
source/Engine/: CMakeLists.txt  engine.cpp  engine.h
source/Engine/include/: Engine.h  EngineSystem.h  Globals.h  stdlibincl.h
source/Engine/include/Components/: RenderComponent.h  TransformComponent.h
source/Engine/include/GUI/: DebugGUI.h  DebugGUISubscriber.h  Editor.h  FrameCounter.h
source/Engine/include/Input/: Input.h  InputAction.h
source/Engine/include/Systems/: EngineSystem.h  EntitySystem.h  EventSystem.h  InputSystem.h  LogSystem.h  ObjectSystem.h  RenderSystem.h  ResourceSystem.h  WorldSystem.h
source/Engine/include/Systems/Debug/: EventSystemDebug.h  InputSystemDebug.h  LogSystemDebug.h  WorldSystemDebug.h
source/Engine/include/Systems/World/: ComponentSubsystem.h  EntitySubsystem.h
source/Engine/src/: Engine.cpp  Globals.cpp
source/Engine/src/GUI/: Editor.cpp
source/Engine/src/Input/: InputAction.cpp
source/Engine/src/Systems/: EngineSystem.cpp  EntitySystem.cpp  EventSystem.cpp  InputSystem.cpp  LogSystem.cpp  ObjectSystem.cpp  RenderSystem.cpp  ResourceSystem.cpp  WorldSystem.cpp
source/Engine/src/Systems/Debug/: EventSystemDebug.cpp  InputSystemDebug.cpp  LogSystemDebug.cpp  WorldSystemDebug.cpp
source/Engine/src/Systems/World/: ComponentSubsystem.cpp  EntitySubsystem.cpp
source/Main/: CMakeLists.txt  main.cpp
source/RenderLib/: CMakeLists.txt
source/RenderLib/include/: Mesh.h  Shader.h  Texture.h
source/RenderLib/src/: Mesh.cpp  Shader.cpp  Texture.cpp
